--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: shinydashboard
+Package: shinydashboard2
 Title: Create Dashboards with 'Shiny'
 Version: 0.7.1
 Authors@R: c(
@@ -10,7 +10,7 @@ Authors@R: c(
     )
 Description: Create dashboards with 'Shiny'. This package provides
     a theme on top of 'Shiny', making it easy to create attractive dashboards.
-URL: http://rstudio.github.io/shinydashboard/
+URL: http://rstudio.github.io/shinydashboard2/
 Depends:
     R (>= 3.0)
 License: GPL (>= 2) | file LICENSE
@@ -19,5 +19,5 @@ Imports:
     shiny (>= 1.0.0),
     htmltools (>= 0.2.6),
     promises
-BugReports: https://github.com/rstudio/shinydashboard
-RoxygenNote: 6.0.1.9000
+BugReports: https://github.com/rstudio/shinydashboard2
+RoxygenNote: 7.2.1
